@@ -11,3 +11,4 @@ Refactor Prowess traits to properly increase durability of respective weapons.
 Redo math calculations for Martial Artist to prevent scaling from being exponential instead of linear.
 reduce Max damage scaling for Martial Artist.
 Try to prevent Specialization from robbing all xp.
+Fix BatteringRam allowing players to stay invisible to Zombies.
